Adding google scholar

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="css/academicons.min.css"/>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -139,84 +140,91 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://github.com/im-vaibhav/Twitter-Bot-Detection" target="_blank">Twitter Bot Detection</a></h3>
                             <div class="subheading mb-3">Big Data | Supervised Learning, SparkML, Kafka, MongoDB</div>
-                            <p>
-                                Built a machine learning model on a big data scale (accuracy of 91%) on SparkML, MongoDB 
-                                and Kafka to identify Twitter bots that spread political propaganda.</p>
+                            <p> Built a machine learning model on a big data scale (accuracy of 91%) on SparkML, MongoDB and Kafka to identify Twitter bots that spread political propaganda.</p>
                         </div>
-                    </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
+                    </div>                    
 
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
-                            <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Stance-Detection-From-Tweets" target="_blank">Stance detection from tweets</a></h3>
-                            <div class="subheading mb-3">Natural Language Processing | TF-IDF, Naive Bayes, SVM, Decision Tree and LSTM</div>
-                            <p>The project aims at identifying different stances adopted by the people, concerning various aspects of cancer (such as lethality, prevention, causes, etc) from an extensive collection of tweets.</p>
-                        </div>
-                    </div>
-
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
-                            <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Android" target="_blank">Android Apps</a></h3>
-                            <div class="subheading mb-3">Android Development | Java, XML</div>
-                            <p>Worked on number of projects while completing the Android Development Course on Udacity placed by Google. Developed variety of apps that uses basic android concepts of user interface and user inputs.</p>
-                        </div>
-                    </div>
-
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/NLP-Powered-Photo-Search" target="_blank">NLP Powered Photo Album Search</a></h3>
                             <div class="subheading mb-3">Cloud Computing | AWS Transcribe, VPC, ElasticSearch, AWS Lex, AWS Rekognition, CloudWatch</div>
                             <p>Voice Based Photo Album Search" is a serverless, microservice driven web-based application, that can be searched using natural language through both text and voice. We can upload photos and search then similar to a image search engine.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
                     </div>
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Intelligent-System-Design-using-Cloud" target="_blank">Intelligent System Design using Cloud</a></h3>
                             <div class="subheading mb-3">Cloud Computing | Amazon Sagemaker, AWS S3, AWS Lambda, AWS SES and Amazon CloudFormation</div>
                             <p>Email Spam Detector" is a serverless, microservice driven application, powered by a machine learning model to predict whether an email is spam or not. This system that upon receipt of an email message, automatically flag it as spam or not, based on the prediction obtained from the ML model. And it replies back to the sender of the email with a reasonable prediction.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
                     </div>
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Smart-Door-Authentication-System" target="_blank">SMART DOOR AUTHENTICATION SYSTEM</a></h3>
                             <div class="subheading mb-3">Cloud Computing | Amazon Kinesis Stream, Amazon Rekoginition, Serverless, DynamoDB</div>
                             <p>Smart-Door-Authentication-System" is a serverless, microservice driven web-based application. It builds a distributed system that authenticates people and provides them with access to a virtual door.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
                     </div>
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="#">AI CUSTOMER SERVICE CHATBOT</a></h3>
                             <div class="subheading mb-3">Cloud Computing | AWS Lex, S3, API-Gateway, Lambda, Cognito Elastic Search</div>
                             <p>Dining Concierge Chatbot" is a serverless, microservice driven web-based application. It is an intelligent natural language powered chat-bot that can help you provide restaurant suggestions based on your requirements such as - City, Time, Number of people, Cuisine Type and Date.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
                     </div>
                     
 
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Apartment-Database-Porject" target="_blank">Database Designing</a></h3>
                             <div class="subheading mb-3">Database Systems | MySQL</div>
                             <p>Designed the schema and created a normalized apartments database with 5 tables linked together using keys.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
                     </div>
 
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/UnixShell" target="_blank">Unix Shell</a></h3>
                             <div class="subheading mb-3">Operating System | C, Assembly, XV6</div>
                             <p>Implemented my own Shell from scratch in XV6 operating system using UNIX system calls as a part of Operating Systems course at New York University. Command execution, I/O Redirection and Pipelining.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
                     </div>
                     
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/xv6-LotterScheduler" target="_blank">Lottery Scheduler</a></h3>
                             <div class="subheading mb-3">Operating System | C, Assembly, XV6</div>
                             <p>Implemented and Tested lottery scheduling, a randomized algorithm that allows processes to receive a proportional share of the CPU without explicitly tracking how long each process has been run.</p>
                         </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Stance-Detection-From-Tweets" target="_blank">Stance detection from tweets</a></h3>
+                            <div class="subheading mb-3">Natural Language Processing | TF-IDF, Naive Bayes, SVM, Decision Tree and LSTM</div>
+                            <p>The project aims at identifying different stances adopted by the people, concerning various aspects of cancer (such as lethality, prevention, causes, etc) from an extensive collection of tweets.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2018</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Android" target="_blank">Android Apps</a></h3>
+                            <div class="subheading mb-3">Android Development | Java, XML</div>
+                            <p>Worked on number of projects while completing the Android Development Course on Udacity placed by Google. Developed variety of apps that uses basic android concepts of user interface and user inputs.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2017 - 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -224,7 +232,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Over 10000 lines of code</div>
+                    <div class="subheading mb-3">Over 5000 lines of code</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="devicon-cplusplus-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-java-plain-wordmark"></i></li>
@@ -277,31 +285,30 @@
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://doi.org/10.11175/easts.13.2614"
                                     target="_blank">Crash Severity Analysis Through Nonparametric Machine Learning Methods</a></h3>
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
-                                Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629
+                                Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. <br><a href=""><u>Cited by 0</u></a>
                             </p>
                         </div>
-                        <div class="resume-date text-md-right">
-                            <span class="text-primary">Dec '19</span>
-                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Dec 2019</span></div>
                     </div>
-                    <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                        <div class="resume-content mr-auto">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="https://www.cse.iitb.ac.in/~ganesh/papers/wsc2018.pdf"
                                     target="_blank">Improving the learnability of classifiers in Sanskrit OCR corrections</a></h3>
                             <div class="subheading mb-3">Devaraj Adiga, Rohit Saluja, <b>Vaibhav Agrawal</b>, Ganesh Ramakrishnan, Parag Chaudhuri, K. Ramasubramanian, Malhar Kulkarni</div>
                             <p>
-                                Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018
+                                Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. <br><a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 3</u></a>
                             </p>
                         </div>
-                        <div class="resume-date text-md-right">
-                            <span class="text-primary">July '18</span>
-                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2018</span></div>
+                    </div>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a
                     </div>
                 </div>
             </section>            
