--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="Resume.pdf" target="_blank">Resume</a></li>
                 </ul>
             </div>
         </nav>
@@ -47,8 +48,8 @@
                         <span class="text-primary">Agrawal</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Prospect Park · Brooklyn, NY 11218 · (631) 552-8406 ·
-                        <a href="mailto:va8817@gmail.com">va8817@gmail.com</a>
+                        New York, NY 11218 · (631) 552-8406 ·
+                        <a href="mailto:va1019@nyu.edu">va1019@nyu.edu</a>
                         <br />
                         <br />
                         Living the dream!
@@ -59,17 +60,15 @@
                        
                        I did my undergrad at Indian Institute of Technology Kharagpur.  I graduated with a major in Civil Engineering and a minor in Computer Science and Engineering. Through my journey at IIT KGP, I found my interest in computer science which has led me to pursue my advanced study in CS. 
                        
-                       I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and InterviewBit. </p>
+                       I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and InterviewBit. 
+                    <br> I am graduating with MS in CS from NYU in Dec 2020 and seeking a new grad Software Engineering / Machine Learning role starting Jan 2021.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/iamvaibhav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
                     </div>
                     <br>
-                    <div class="resume-section-link text-md-center">
-                        <a href="Resume.pdf" target="_blank"><button type="button"
-                                class="btn btn-primary">Resume</button></a>
-                    </div>
+                    <!-- <div class="resume-section-link text-md-center"><a href="Resume.pdf" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a></div> -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -121,6 +120,7 @@
                             <h3 class="mb-0">New York University</h3>
                             <div class="subheading mb-3">MS in Computer Science</div>
                             <p>GPA: 3.83</p>
+                            <p>Design and Analysis of Algorithms, Operating Systems, Database Managment Systems, Cloud Computing, Information Visualization, Deep Learning, Java - Special Topics, Big Data, DevOps</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020 (Expected)</span></div>
                     </div>
@@ -130,6 +130,7 @@
                             <h3 class="mb-0">Indian Institute of Technology Kharagpur</h3>
                             <div class="subheading mb-3">Bachelor of Technology</div>
                             <p>GPA: 9.03/10 | <b>Gold Medalist</b></p>
+                            <p>Algorithms I, Programming and Data Structres, Probability and Statistics, Switching Circuits and Logic Design, Computer Architecture and Operating System, Machine Learning, Artifcial Intelligence, Natural Language Processing</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2015 - Aug 2019</span></div>
                     </div>
@@ -228,6 +229,7 @@
                     </div>
                 </div>
             </section>
+            <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
@@ -311,7 +313,8 @@
                         <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a
                     </div>
                 </div>
-            </section>            
+            </section>       
+            <hr class="m-0" />     
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
