Changing name of chatbot

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"> <a href="#">AI CUSTOMER SERVICE CHATBOT</a></h3>
+                            <h3 class="mb-0"> <a href="#">Dining Concierge Chatbot</a></h3>
                             <div class="subheading mb-3">Cloud Computing | AWS Lex, S3, API-Gateway, Lambda, Cognito Elastic Search</div>
                             <p>Dining Concierge Chatbot" is a serverless, microservice driven web-based application. It is an intelligent natural language powered chat-bot that can help you provide restaurant suggestions based on your requirements such as - City, Time, Number of people, Cuisine Type and Date.</p>
                         </div>
