--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                        
                        I did my undergrad at Indian Institute of Technology Kharagpur.  I graduated with a major in Civil Engineering and a minor in Computer Science and Engineering. Through my journey at IIT KGP, I found my interest in computer science which has led me to pursue my advanced study in CS. 
                        
-                       I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and InterviewBit. 
-                    <br> <u>I am graduating with MS in CS from NYU in Dec 2020 and seeking a new grad Software Engineering / Machine Learning role starting Jan 2021.</u></p>
+                       I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and LeetCode. 
+                    <br> <u>I am graduating with MS in CS from NYU in Dec 2020 and seeking a new grad Software Engineering / Machine Learning role starting Jan 2021.</u> Please feel free to reach out to me!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/iamvaibhav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
@@ -212,13 +212,28 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/ML-Assignments-CS60050/tree/master/15CE10057_ML_A3" target="_blank">Automated clustering of Research Papers</a></h3>
+                            <div class="subheading mb-3">Machine Learning | Unsupervised Learning, Hierarchical Clustering, Girvan-Newman Clustering</div>
+                            <p>AAAI wants an automated unsupervised script to group research documents into different clusters, so that all papers having similar high-level domains will be grouped together.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Spring 2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Stance-Detection-From-Tweets" target="_blank">Stance detection from tweets</a></h3>
                             <div class="subheading mb-3">Natural Language Processing | TF-IDF, Naive Bayes, SVM, Decision Tree and LSTM</div>
                             <p>The project aims at identifying different stances adopted by the people, concerning various aspects of cancer (such as lethality, prevention, causes, etc) from an extensive collection of tweets.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2018</span></div>
                     </div>
-
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Post-OCR-Processing" target="_blank">Post OCR Processing</a></h3>
+                            <div class="subheading mb-3">Natural Langauge Processing | Language Models, Neural Nets</div>
+                            <p>Designed an algorithm for word corrections of post OCR Sanskrit scripts through statistical language models using edit distance on a known dictionary. Improved the accuracy of the algorithm up by 10%, by introducing morphological language constraints from the grammar, using Sandhi.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Fall 2017</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Android" target="_blank">Android Apps</a></h3>
@@ -306,7 +321,8 @@
                                     target="_blank">Crash Severity Analysis Through Nonparametric Machine Learning Methods</a></h3>
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
-                                Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. <br><a href=""><u>Cited by 0</u></a>
+                                Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
+                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href=""><u>Cited by 0</u></a> 
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Dec 2019</span></div>
@@ -316,8 +332,9 @@
                             <h3 class="mb-0"><a href="https://www.cse.iitb.ac.in/~ganesh/papers/wsc2018.pdf"
                                     target="_blank">Improving the learnability of classifiers in Sanskrit OCR corrections</a></h3>
                             <div class="subheading mb-3">Devaraj Adiga, Rohit Saluja, <b>Vaibhav Agrawal</b>, Ganesh Ramakrishnan, Parag Chaudhuri, K. Ramasubramanian, Malhar Kulkarni</div>
-                            <p>
-                                Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. <br><a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 3</u></a>
+                            <p>                                
+                                Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. 
+                                <br><br><b>Keywords</b>: OCR, Deep Learning, NLP, Attention Models; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 3</u></a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2018</span></div>
