Adding google scholar

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/iamvaibhav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
                     </div>
                     <br>
