--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"> <a href="https://github.com/im-vaibhav/Intelligent-System-Design-using-Cloud" target="_blank">Intelligent System Design using Cloud</a></h3>
-                            <div class="subheading mb-3">Cloud Computing | Amazon Sagemaker, AWS S3, AWS Lambda, AWS SES and Amazon CloudFormation</div>
+                            <div class="subheading mb-3">Cloud Computing | Amazon Sagemaker, AWS S3, AWS Lambda, AWS SES, Amazon CloudFormation</div>
                             <p>Email Spam Detector is a serverless, microservice driven application, powered by a machine learning model to predict whether an email is spam or not. This system that upon receipt of an email message, automatically flag it as spam or not, based on the prediction obtained from the ML model. And it replies back to the sender of the email with a reasonable prediction.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
