--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">PM Intern</h3>
-                            <div class="subheading mb-3">Salesforce <span  style="font-size: 1.4em; color:#1798c1;"><i class="fab fa-salesforce"></i></span></div>
+                            <div class="subheading mb-3"><span  style="font-size: 1.1em; color:#1798c1;"><i class="fab fa-salesforce"></i></span> Salesforce.com, San Francisco CA</div>
                             <p>Worked in Platform Standards Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Aug 2020</span></div>
@@ -96,7 +96,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Summer Research Intern (Statistics and Testing)</h3>
-                            <div class="subheading mb-3">Indian Institute of Science Bangalore</div>
+                            <div class="subheading mb-3">Indian Institute of Science, Bangalore</div>
                             <p>Analyzed Google's traffic speed data to explore statistical distributions of link-level traffic speed on transportation networks and developed a dedicated algorithm for the task of link extraction leveraging from Google Maps API.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2018 - July 2018</span></div>
