--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Summer Research Intern (Statistics and Testing)</h3>
+                            <h3 class="mb-0">Summer Research Intern (Statistics)</h3>
                             <div class="subheading mb-3">Indian Institute of Science, Bangalore</div>
                             <p>Analyzed Google's traffic speed data to explore statistical distributions of link-level traffic speed on transportation networks and developed a dedicated algorithm for the task of link extraction leveraging from Google Maps API.</p>
                         </div>
