--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
                                 Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
-                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; 
-                                <!-- <a href=""><u>Cited by 0</u></a>  -->
+                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost
+                                <!-- ;<a href=""><u>Cited by 0</u></a>  -->
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Dec 2019</span></div>
