--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
                     </div>
-                    <br>
+                    <br>                    
                     <!-- <div class="resume-section-link text-md-center"><a href="Resume.pdf" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a></div> -->
                 </div>
             </section>
@@ -80,7 +80,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer (Django, React.js, SQL)</h3>
-                            <div class="subheading mb-3">FITL, New York University</div>
+                            <div class="subheading mb-3"><img alt src = "/assets/img/nyu.jpg">  FITL, New York University</div>
                             <p>Building a RESTful API driven web app to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Present</span></div>
@@ -96,7 +96,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Summer Research Intern (Statistics)</h3>
-                            <div class="subheading mb-3">Indian Institute of Science, Bangalore</div>
+                            <div class="subheading mb-3"><img alt src = "/assets/img/iisc.png">  Indian Institute of Science, Bangalore</div>
                             <p>Analyzed Google's traffic speed data to explore statistical distributions of link-level traffic speed on transportation networks and developed a dedicated algorithm for the task of link extraction leveraging from Google Maps API.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2018 - July 2018</span></div>
@@ -104,7 +104,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Applied Machine Learning Intern (NLP)</h3>
-                            <div class="subheading mb-3">Indian Institute of Technology, Bombay</div>
+                            <div class="subheading mb-3"><img alt src = "assets/img/iitbombay.png" style="max-height: 35px;">  Indian Institute of Technology, Bombay</div>
                             <p>Demonstrated different machine learning and deep learning approaches to improve features for ameliorating the error corrections in Sanskrit OCR documents like LSTM and attention models-RNN.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2017 - Oct 2017</span></div>
@@ -260,9 +260,9 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             Scikit-learn, Pandas, Pytorch, Statistics, Map Reduce, Spark, SparkML, NLTK, Keras, TensorFlow, R, Scala, Kafka, Elastic Search, Kibana, Swagger, Postman
-                        </li>
-                        <br>
+                        </li>                                                
                     </ul>                  
+                    <br>
                     <div class="subheading mb-3">Full Stack Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-aws"></i></li>
