--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">New York University</h3>
                             <div class="subheading mb-3">MS in Computer Science</div>
-                            <p>GPA: 3.83</p>
+                            <p>GPA: 3.83/4</p>
                             <p>Design and Analysis of Algorithms, Operating Systems, Database Managment Systems, Cloud Computing, Information Visualization, Deep Learning, Java - Special Topics, Big Data, DevOps</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020 (Expected)</span></div>
