--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer (Django, React.js, SQL)</h3>
-                            <div class="subheading mb-3"><img alt src = "/assets/img/nyu.png" style="max-height: 35px;">  FITL, New York University</div>
+                            <div class="subheading mb-3"><img alt src = "/assets/img/nyu.jpg" style="max-height: 35px;">  FITL, New York University</div>
                             <p>Building a RESTful API driven web app to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Present</span></div>
