--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <h3 class="mb-0">Indian Institute of Technology Kharagpur</h3>
                             <div class="subheading mb-3">Bachelor of Technology</div>
                             <p>GPA: 9.03/10 | <b>Gold Medalist</b></p>
-                            <p>Algorithms I, Programming and Data Structres, Probability and Statistics, Switching Circuits and Logic Design, Computer Architecture and Operating System, Machine Learning, Artifcial Intelligence, Natural Language Processing, Parallel Programming</p>
+                            <p>Algorithms and Data Structres, Probability and Statistics, Switching Circuits and Logic Design, Computer Architecture and Operating System, Machine Learning, Artifcial Intelligence, Natural Language Processing, Parallel Programming</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2015 - Aug 2019</span></div>
                     </div>
