--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="subheading mb-3">Data Science & Machine Learning</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            Scikit-learn, Pandas, Pytorch, Statistics, Map Reduce, Spark, SparkML, NLTK, Keras, TensorFlow, R, Scala, Kafka, Elastic Search, Kibana, Swagger, Postman
+                            Scikit-learn, Pandas, Pytorch, Statistics, NLTK, Keras, TensorFlow, Matplotlib, Hadoop, Map Reduce, Spark, Spark ML, Scala, Apache Kafka, Elastic Search, Kibana, Swagger
                         </li>                                                
                     </ul>                  
                     <br>
