--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                        I did my undergrad at Indian Institute of Technology Kharagpur.  I graduated with a major in Civil Engineering and a minor in Computer Science and Engineering. Through my journey at IIT KGP, I found my interest in computer science which has led me to pursue my advanced study in CS. 
                        
                        I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and LeetCode. 
-                    <br> <u>I am graduating with MS in CS from NYU in Dec 2020 and seeking a new grad Software Engineering / Machine Learning role starting Jan 2021.</u> Please feel free to reach out to me!</p>
+                    <br><br> <u>I am graduating with MS in CS from NYU in Dec 2020 and seeking a new grad Software Engineering / Machine Learning role starting Jan 2021.</u> Please feel free to reach out to me!</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/iamvaibhav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
